# WeakSSL

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile  README.md  Weak-lite.sh  Weak.sh  Weak2.9.7.sh  tls_sweep.sh  tls_sweeper.sh
.github/workflows/: ci.yml
legacy/: README.md  TLS_Check.sh  Weak-3.0.0-unstable.sh  Weak.sh  tls_sweeper.sh
rsc/: README.md
scripts/: README.md  install.ps1  install.sh
src/: main.rs
